fixed layout shift

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -23,8 +23,12 @@
 html,
 body {
   overflow: hidden auto;
+
   max-width: 100vw;
+  margin-right: calc(-1 * (100vw - 100%));
+
   color: var(--color-dark);
+
   background-color: var(--color-secondary);
 }
 
