--- a/components/layout/MainLayout/mainLayout.module.scss
+++ b/components/layout/MainLayout/mainLayout.module.scss
@@ -13,7 +13,7 @@
     grid-template-areas:
       '. sidebar main .'
       'footer footer footer footer';
-    grid-template-columns: auto 17.5rem minmax(auto, 77.25rem) auto;
+    grid-template-columns: auto 18.75rem minmax(auto, 76rem) auto;
     grid-template-rows: 1fr auto;
   }
 }
